# vs-mobile-app

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: flutter.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/virtual_sketch_app/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app_module.dart  app_widget.dart
lib/components/: Dialog.dart  app_bar_menu.dart  arcore_image_view.dart  botao_circular.dart  circle_button.dart  comp_home.dart  comp_main.dart  custom_close_button.dart  delimited_area.dart  fundo.dart  history.dart  history_card_list.dart  history_close_button.dart  home_view.dart  main_frame.dart  section_template.dart  splash_screan.dart  subject_item.dart  subject_screen.dart  vs_frame.dart
lib/model/: create_session_model.dart  equation_model.dart  graph_model.dart
lib/repositories/: create_session_repositiory.dart  get_equation_repository.dart  get_graph_repository.dart  kill_session_repository.dart  repositories.dart
lib/repositories/interfaces/: Ikill_session.dart  icreate_session.dart  iget_equation.dart  iget_graph.dart
lib/services/: dio_client.dart
lib/services/api/: api.dart  create_session_api.dart  get_equation_api.dart  get_graph_api.dart  kill_session_api.dart
lib/services/constants/: dio_base_options.dart  endpoints.dart
lib/svm/: CMakeLists.txt  predict.cpp  predict.hpp  svmtest.cpp  svmtrain.cpp  train.cpp  train.hpp
lib/svm/assets/: trainedData.yml
lib/svm/svmsamples/: CMakeLists.txt  realtest.cpp  realtrain.cpp  sampletest.cpp  sampletrain.cpp  thresholddeterminer.cpp
lib/svm/utils/: coordinatedMat.hpp  descriptordeterminer.cpp  descriptordeterminer.hpp  imagepreprocessing.cpp  imagepreprocessing.hpp  labelassigner.cpp  labelassigner.hpp  rectangledeterminer.cpp  rectangledeterminer.hpp  svm.cpp  svm.hpp
lib/utils/: ia_read.dart  save_image.dart  to_uint_8_list.dart
lib/view/: ar_camera_view.dart  home_view.dart  main_view.dart  result_view.dart
lib/view_model/: main_viewmodel.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
